[workspace]

resolver = "2"

members = [
  "crates/cairo-encoding-components",
  "crates/starknet-chain-components",
  "crates/starknet-chain-context",
  "crates/starknet-relayer",
  "crates/starknet-test-components",
  "crates/starknet-integration-tests",
  "crates/starknet-madara-tests",
  "crates/starknet-cli",
  "crates/tools",
]

[workspace.package]

version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
keywords     = [ "blockchain", "consensus", "cosmos", "ibc", "tendermint" ]
repository   = "https://github.com/informalsystems/hermes-sdk"
authors      = [ "Informal Systems <hello@informal.systems>" ]
rust-version = "1.81"

[profile.release]
overflow-checks = true

[workspace.dependencies]
cgp            = { version = "0.4.0" }
cgp-error-eyre = { version = "0.4.0" }

starknet                    = { version = "0.13.0" }
starknet-types-core         = { version = "0.1.7" }
url                         = { version = "2.4.0" }
eyre                        = { version = "0.6.12" }
tokio                       = { version = "1.38" }
secp256k1                   = { version = "0.28.2" }
humantime-serde             = { version = "1.0" }
serde                       = { version = "1.0" }
serde_json                  = { version = "1.0" }
rand                        = { version = "0.8.5" }
sha2                        = { version = "0.10.8" }
tonic                       = { version = "0.12" }
prost                       = { version = "0.13.1" }
prost-types                 = { version = "0.13.1" }
cairo-lang-starknet-classes = { version = "2.11.4" }
clap                        = { version = "4.5.20" }
toml                        = { version = "0.8.15" }
oneline-eyre                = { version = "0.1.0" }
stable-eyre                 = { version = "0.2.2" }
tracing                     = { version = "0.1.40" }
tracing-subscriber          = { version = "0.3.18" }
flate2                      = { version = "1.0" }
http                        = { version = "1.0.0" }
futures                     = { version = "0.3.30", default-features = false }
tiny-bip39                  = { version = "1.0.0" }
hex                         = { version = "0.4.3" }
sha256                      = { version = "1.6.0" }
reqwest                     = { version = "0.12.5" }
indexmap                    = { version = "2.9.0" }
humantime                   = { version = "2.1.0" }

ibc                       = { version = "0.56.0" }
ibc-proto                 = { version = "0.51.1" }
ibc-client-starknet-types = { version = "0.1.0" }
tendermint                = { version = "0.40" }
tendermint-rpc            = { version = "0.40" }

hermes-prelude                      = { version = "0.1.0" }
hermes-core                         = { version = "0.1.0" }
hermes-cosmos                       = { version = "0.1.0" }
hermes-cosmos-core                  = { version = "0.1.0" }
hermes-runtime-components           = { version = "0.1.0" }
hermes-async-runtime-components     = { version = "0.1.0" }
hermes-tokio-runtime-components     = { version = "0.1.0" }
hermes-chain-components             = { version = "0.1.0" }
hermes-chain-type-components        = { version = "0.1.0" }
hermes-runtime                      = { version = "0.1.0" }
hermes-error                        = { version = "0.1.0" }
hermes-encoding-components          = { version = "0.1.0" }
hermes-logging-components           = { version = "0.1.0" }
hermes-tracing-logging-components   = { version = "0.1.0" }
hermes-relayer-components           = { version = "0.1.0" }
hermes-cosmos-chain-components      = { version = "0.1.0" }
hermes-cosmos-chain-preset          = { version = "0.1.0" }
hermes-cosmos-encoding-components   = { version = "0.1.0" }
hermes-cosmos-relayer               = { version = "0.1.0" }
hermes-cosmos-wasm-relayer          = { version = "0.1.0" }
hermes-cosmos-test-components       = { version = "0.1.0" }
hermes-cosmos-integration-tests     = { version = "0.1.0" }
hermes-any-counterparty             = { version = "0.1.0" }
hermes-wasm-client-components       = { version = "0.1.0" }
hermes-wasm-test-components         = { version = "0.1.0" }
hermes-wasm-encoding-components     = { version = "0.1.0" }
hermes-cli-components               = { version = "0.1.0" }
hermes-cli                          = { version = "0.1.0" }
hermes-starknet-cli                 = { version = "0.1.0" }
hermes-test-components              = { version = "0.1.0" }
hermes-ibc-test-suite               = { version = "0.1.0" }
hermes-cairo-encoding-components    = { version = "0.1.0" }
hermes-protobuf-encoding-components = { version = "0.1.0" }
hermes-starknet-chain-components    = { version = "0.1.0" }
hermes-starknet-test-components     = { version = "0.1.0" }
hermes-starknet-chain-context       = { version = "0.1.0" }
hermes-starknet-relayer             = { version = "0.1.0" }
hermes-starknet-integration-tests   = { version = "0.1.0" }
hermes-starknet-madara-tests        = { version = "0.1.0" }
poseidon                            = { version = "0.1.0" }

starknet-block-verifier = { version = "0.1.0" }

[workspace.lints.rust]
unsafe_code          = "forbid"
dead_code            = "deny"
rust_2018_idioms     = { level = "deny", priority = -1 }
trivial_casts        = "deny"
unused_import_braces = "deny"
unused_variables     = "allow"

[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args         = "deny"
trait_duplication_in_bounds   = "deny"
use_self                      = "deny"
redundant_clone               = "deny"

[patch.crates-io]
hermes-cairo-encoding-components  = { path = "./crates/cairo-encoding-components" }
hermes-starknet-chain-components  = { path = "./crates/starknet-chain-components" }
hermes-starknet-test-components   = { path = "./crates/starknet-test-components" }
hermes-starknet-chain-context     = { path = "./crates/starknet-chain-context" }
hermes-starknet-relayer           = { path = "./crates/starknet-relayer" }
hermes-starknet-cli               = { path = "./crates/starknet-cli" }
hermes-starknet-integration-tests = { path = "./crates/starknet-integration-tests" }

hermes-starknet-madara-tests = { path = "./crates/starknet-madara-tests" }

ibc                         = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core                    = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-client-types       = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-host-cosmos        = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-client-tendermint       = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-client-tendermint-types = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-client-wasm-types       = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-client             = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-channel-types      = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }
ibc-core-handler-types      = { git = "https://github.com/cosmos/ibc-rs", rev = "230e7a5e" }

ibc-client-starknet-types = { path = "../light-client/ibc-client-starknet-types" }

starknet-block-verifier = { path = "../light-client/starknet-block-verifier" }

poseidon = { path = "../light-client/poseidon" }

cgp             = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-core        = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-extra       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async-macro = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-macro       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-macro-lib   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-type        = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error-extra = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-run         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-runtime     = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-sync        = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-inner       = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error-eyre  = { git = "https://github.com/contextgeneric/cgp.git" }

hermes-core                          = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-prelude                       = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-chain-components              = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-chain-type-components         = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-relayer-components            = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-relayer-components-extra      = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-runtime-components            = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-async-runtime-components      = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-tokio-runtime-components      = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-runtime                       = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-error                         = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-encoding-components           = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-protobuf-encoding-components  = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-logging-components            = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-tracing-logging-components    = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-test-components               = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-ibc-test-suite                = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-any-counterparty              = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cosmos                        = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cosmos-core                   = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cosmos-chain-components       = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cosmos-chain-preset           = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cosmos-relayer                = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cosmos-wasm-relayer           = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cosmos-test-components        = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cosmos-encoding-components    = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cosmos-integration-tests      = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-comet-light-client-components = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-comet-light-client-context    = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-wasm-test-components          = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-wasm-client-components        = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-wasm-encoding-components      = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cli-components                = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cli                           = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
hermes-cli-framework                 = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-retry-to-poll-event" }
