[workspace]

resolver = "2"

members = [
  "crates/cairo-encoding-components",
  "crates/starknet-chain-components",
  "crates/starknet-chain-context",
  "crates/starknet-relayer",
  "crates/starknet-test-components",
  "crates/starknet-integration-tests",
  "crates/starknet-cli",
  "crates/tools",
]

[workspace.package]

version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
keywords     = [ "blockchain", "consensus", "cosmos", "ibc", "tendermint" ]
repository   = "https://github.com/informalsystems/hermes-sdk"
authors      = [ "Informal Systems <hello@informal.systems>" ]
rust-version = "1.81"

[profile.release]
overflow-checks = true

[workspace.dependencies]
cgp            = { version = "0.4.0" }
cgp-error-eyre = { version = "0.4.0" }

ibc                         = { version = "0.56.0" }
starknet                    = { version = "0.13.0" }
starknet-v14                = { version = "0.14.0", package = "starknet" }
starknet-crypto             = { version = "0.7.4" }
starknet-types-core         = { version = "0.1.8" }
url                         = { version = "2.5" }
eyre                        = { version = "0.6.12" }
tokio                       = { version = "1.45" }
secp256k1                   = { version = "0.28.2" }
humantime-serde             = { version = "1.1" }
serde                       = { version = "1.0" }
serde_json                  = { version = "1.0" }
rand                        = { version = "0.8.5" }
sha2                        = { version = "0.10.9" }
tonic                       = { version = "0.12" }
prost                       = { version = "0.13.1" }
prost-types                 = { version = "0.13.1" }
cairo-lang-starknet-classes = { version = "2.11.4" }
clap                        = { version = "4.5" }
toml                        = { version = "0.8.23" }
oneline-eyre                = { version = "0.1.0" }
stable-eyre                 = { version = "0.2.2" }
tracing                     = { version = "0.1.41" }
tracing-subscriber          = { version = "0.3.19" }
flate2                      = { version = "1.1" }
http                        = { version = "1.3" }
futures                     = { version = "0.3.31", default-features = false }
tiny-bip39                  = { version = "1.0" }
hex                         = { version = "0.4.3" }
ureq                        = { version = "3.0" }
indexmap                    = { version = "2.10" }
humantime                   = { version = "2.2" }
time                        = { version = "0.3" }
sha256                      = { version = "1.6" }
garaga                      = { version = "0.18.1", package = "garaga_rs", default-features = false }
ibc-proto                   = { version = "0.51.1" }
ibc-client-starknet-types   = { version = "0.1.0" }
tendermint                  = { version = "0.40" }
tendermint-rpc              = { version = "0.40" }

hermes-prelude                      = { version = "0.1.0" }
hermes-core                         = { version = "0.1.0" }
hermes-cosmos                       = { version = "0.1.0" }
hermes-cosmos-core                  = { version = "0.1.0" }
hermes-runtime-components           = { version = "0.1.0" }
hermes-async-runtime-components     = { version = "0.1.0" }
hermes-tokio-runtime-components     = { version = "0.1.0" }
hermes-chain-components             = { version = "0.1.0" }
hermes-chain-type-components        = { version = "0.1.0" }
hermes-runtime                      = { version = "0.1.0" }
hermes-error                        = { version = "0.1.0" }
hermes-encoding-components          = { version = "0.1.0" }
hermes-logging-components           = { version = "0.1.0" }
hermes-tracing-logging-components   = { version = "0.1.0" }
hermes-relayer-components           = { version = "0.1.0" }
hermes-cosmos-chain-components      = { version = "0.1.0" }
hermes-cosmos-chain-preset          = { version = "0.1.0" }
hermes-cosmos-encoding-components   = { version = "0.1.0" }
hermes-cosmos-relayer               = { version = "0.1.0" }
hermes-cosmos-wasm-relayer          = { version = "0.1.0" }
hermes-cosmos-test-components       = { version = "0.1.0" }
hermes-cosmos-integration-tests     = { version = "0.1.0" }
hermes-any-counterparty             = { version = "0.1.0" }
hermes-wasm-client-components       = { version = "0.1.0" }
hermes-wasm-test-components         = { version = "0.1.0" }
hermes-wasm-encoding-components     = { version = "0.1.0" }
hermes-wasm-chain-components        = { version = "0.1.0" }
hermes-cli-components               = { version = "0.1.0" }
hermes-cli                          = { version = "0.1.0" }
hermes-starknet-cli                 = { version = "0.1.0" }
hermes-test-components              = { version = "0.1.0" }
hermes-ibc-test-suite               = { version = "0.1.0" }
hermes-cairo-encoding-components    = { version = "0.1.0" }
hermes-protobuf-encoding-components = { version = "0.1.0" }
hermes-starknet-chain-components    = { version = "0.1.0" }
hermes-starknet-test-components     = { version = "0.1.0" }
hermes-starknet-chain-context       = { version = "0.1.0" }
hermes-starknet-relayer             = { version = "0.1.0" }
hermes-starknet-integration-tests   = { version = "0.1.0" }

starknet-block-verifier   = { version = "0.1.0", default-features = false }
starknet-storage-verifier = { version = "0.1.0", default-features = false }
starknet-crypto-lib       = { version = "0.1.0", default-features = false }

[workspace.lints.rust]
unsafe_code          = "forbid"
dead_code            = "deny"
rust_2018_idioms     = { level = "deny", priority = -1 }
trivial_casts        = "deny"
unused_import_braces = "deny"
unused_variables     = "allow"

[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args         = "deny"
trait_duplication_in_bounds   = "deny"
use_self                      = "deny"
redundant_clone               = "deny"

[patch.crates-io]
hermes-cairo-encoding-components  = { path = "./crates/cairo-encoding-components" }
hermes-starknet-chain-components  = { path = "./crates/starknet-chain-components" }
hermes-starknet-test-components   = { path = "./crates/starknet-test-components" }
hermes-starknet-chain-context     = { path = "./crates/starknet-chain-context" }
hermes-starknet-relayer           = { path = "./crates/starknet-relayer" }
hermes-starknet-cli               = { path = "./crates/starknet-cli" }
hermes-starknet-integration-tests = { path = "./crates/starknet-integration-tests" }

ibc                         = { git = "https://github.com/cosmos/ibc-rs", rev = "d28b8715" }
ibc-core                    = { git = "https://github.com/cosmos/ibc-rs", rev = "d28b8715" }
ibc-core-client-types       = { git = "https://github.com/cosmos/ibc-rs", rev = "d28b8715" }
ibc-core-host-cosmos        = { git = "https://github.com/cosmos/ibc-rs", rev = "d28b8715" }
ibc-client-tendermint       = { git = "https://github.com/cosmos/ibc-rs", rev = "d28b8715" }
ibc-client-tendermint-types = { git = "https://github.com/cosmos/ibc-rs", rev = "d28b8715" }
ibc-client-wasm-types       = { git = "https://github.com/cosmos/ibc-rs", rev = "d28b8715" }
ibc-core-client             = { git = "https://github.com/cosmos/ibc-rs", rev = "d28b8715" }
ibc-core-channel-types      = { git = "https://github.com/cosmos/ibc-rs", rev = "d28b8715" }
ibc-core-handler-types      = { git = "https://github.com/cosmos/ibc-rs", rev = "d28b8715" }

ibc-client-starknet-types = { path = "../light-client/ibc-client-starknet-types" }
starknet-block-verifier   = { path = "../light-client/starknet-block-verifier" }
starknet-storage-verifier = { path = "../light-client/starknet-storage-verifier" }
starknet-crypto-lib       = { path = "../light-client/starknet-crypto-lib" }

garaga_rs = { git = "https://github.com/keep-starknet-strange/garaga", rev = "5c5859e" }

cgp             = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-core        = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-extra       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-async       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-async-macro = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-component   = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-macro       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-macro-lib   = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-type        = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-field       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-error       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-error-extra = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-run         = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-runtime     = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-sync        = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-inner       = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }
cgp-error-eyre  = { git = "https://github.com/contextgeneric/cgp.git", rev = "3e24278" }

hermes-core                          = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-prelude                       = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-chain-components              = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-chain-type-components         = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-relayer-components            = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-relayer-components-extra      = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-runtime-components            = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-async-runtime-components      = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-tokio-runtime-components      = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-runtime                       = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-error                         = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-encoding-components           = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-protobuf-encoding-components  = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-logging-components            = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-tracing-logging-components    = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-test-components               = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-ibc-test-suite                = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-any-counterparty              = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cosmos                        = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cosmos-core                   = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cosmos-chain-components       = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cosmos-chain-preset           = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cosmos-relayer                = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cosmos-wasm-relayer           = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cosmos-test-components        = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cosmos-encoding-components    = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cosmos-integration-tests      = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-comet-light-client-components = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-comet-light-client-context    = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-wasm-test-components          = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-wasm-client-components        = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-wasm-encoding-components      = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-wasm-chain-components         = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cli-components                = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cli                           = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
hermes-cli-framework                 = { git = "https://github.com/informalsystems/hermes-sdk.git", branch = "luca_joss/add-wasm-upload-and-deploy-components" }
