[workspace]

resolver = "2"

members = [
  "crates/cli",
]

[workspace.package]

version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
keywords     = [ "blockchain", "consensus", "cosmos", "ibc", "tendermint" ]
repository   = "https://github.com/informalsystems/hermes-sdk"
authors      = [ "Informal Systems <hello@informal.systems>" ]
rust-version = "1.81"

[workspace.dependencies]
cgp            = { version = "0.3.1" }
cgp-error-eyre = { version = "0.3.0" }

clap               = { version = "4.5.20" }
eyre               = { version = "0.6.12" }
stable-eyre        = { version = "0.2.2" }
starknet           = { version = "0.11.0" }
tokio              = { version = "1.38" }
toml               = { version = "0.8.15" }
tracing            = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }

ibc = { version = "0.56.0" }

hermes-cli                        = { version = "0.1.0" }
hermes-cli-components             = { version = "0.1.0" }
hermes-cosmos-relayer             = { version = "0.1.0" }
hermes-encoding-components        = { version = "0.1.0" }
hermes-error                      = { version = "0.1.0" }
hermes-logger                     = { version = "0.1.0" }
hermes-logging-components         = { version = "0.1.0" }
hermes-relayer-components         = { version = "0.1.0" }
hermes-runtime                    = { version = "0.1.0" }
hermes-runtime-components         = { version = "0.1.0" }
hermes-starknet-chain-components  = { version = "0.1.0" }
hermes-starknet-chain-context     = { version = "0.1.0" }
hermes-starknet-cli               = { version = "0.1.0" }
hermes-starknet-integration-tests = { version = "0.1.0" }
hermes-starknet-relayer           = { version = "0.1.0" }
hermes-test-components            = { version = "0.1.0" }

[patch.crates-io]
hermes-cairo-encoding-components  = { path = "../relayer/crates/cairo-encoding-components" }
hermes-starknet-chain-components  = { path = "../relayer/crates/starknet-chain-components" }
hermes-starknet-chain-context     = { path = "../relayer/crates/starknet-chain-context" }
hermes-starknet-cli               = { path = "../relayer/crates/starknet-cli" }
hermes-starknet-integration-tests = { path = "../relayer/crates/starknet-integration-tests" }
hermes-starknet-relayer           = { path = "../relayer/crates/starknet-relayer" }
hermes-starknet-test-components   = { path = "../relayer/crates/starknet-test-components" }

ibc-client-starknet-types = { path = "../light-client/ibc-client-starknet-types" }

cgp                         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-core                    = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-extra                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-async-macro             = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component               = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component-macro         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-component-macro-lib     = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-type                    = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field-macro             = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-field-macro-lib         = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error                   = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-error-extra             = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-run                     = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-runtime                 = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-sync                    = { git = "https://github.com/contextgeneric/cgp.git" }
cgp-inner                   = { git = "https://github.com/contextgeneric/cgp.git" }

hermes-chain-components              = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-chain-type-components         = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-relayer-components            = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-relayer-components-extra      = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-runtime-components            = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-async-runtime-components      = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-tokio-runtime-components      = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-runtime                       = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-error                         = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-encoding-components           = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-protobuf-encoding-components  = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-logging-components            = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-tracing-logging-components    = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-logger                        = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-test-components               = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-ibc-test-suite                = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-any-counterparty              = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-chain-components       = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-relayer                = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-wasm-relayer           = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-test-components        = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-encoding-components    = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cosmos-integration-tests      = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-comet-light-client-components = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-comet-light-client-context    = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-wasm-test-components          = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-wasm-client-components        = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-wasm-encoding-components      = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cli-components                = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cli                           = { git = "https://github.com/informalsystems/hermes-sdk.git" }
hermes-cli-framework                 = { git = "https://github.com/informalsystems/hermes-sdk.git" }
