[package]
name       = "attestator"
version    = { workspace = true }
edition    = { workspace = true }
license    = { workspace = true }
keywords   = { workspace = true }
repository = { workspace = true }
authors    = { workspace = true }

[dependencies]
ed25519-dalek   = { workspace = true }
starknet-core   = { workspace = true }
starknet-crypto = { workspace = true }
serde           = { workspace = true, features = [ "derive" ] }
thiserror       = { workspace = true }
ureq            = { workspace = true, optional = true }

[features]
client = [ "ureq/json" ]
