[package]
name         = "ibc-client-starknet-cw"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
readme       = "./../README.md"
keywords     = [ "ibc", "light-client", "starknet", "CosmWasm" ]
description  = "Starknet IBC wasm light-client"

[lib]
crate-type = [ "cdylib", "rlib" ]

[lints]
workspace = true

[dependencies]
# ibc dependencies
ibc-core            = { workspace = true }
ibc-client-cw       = { workspace = true }
ibc-client-starknet = { workspace = true }

# cosmwasm dependencies
cosmwasm-std = { version = "2.2.0" }

[features]
default = [ "std" ]
std = [
  "ibc-core/std",
  "ibc-client-cw/std",
]
library = [  ]
