[package]
name         = "ibc-client-starknet-types"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
repository   = { workspace = true }
readme       = "./../README.md"
keywords     = [ "starknet", "ibc", "light-client", "data-structures" ]
description  = "Starknet IBC light-client types"

[lints]
workspace = true

[dependencies]
ibc-proto                           = { workspace = true }
ibc-core                            = { workspace = true }
tendermint                          = { workspace = true }
derive_more                         = { workspace = true }
prost                               = { workspace = true }
serde                               = { workspace = true, optional = true }
cgp                                 = { workspace = true }
hermes-prelude                      = { workspace = true }
hermes-encoding-components          = { workspace = true }
hermes-protobuf-encoding-components = { workspace = true }
hermes-cosmos-encoding-components   = { workspace = true }

[features]
default = [ "std" ]
std = [  ]
serde = [
  "dep:serde",
  "ibc-core/serde",
]
