[package]
name         = "ibc-client-starknet"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
repository   = { workspace = true }
readme       = "./../README.md"
keywords     = [ "starknet", "ibc", "light-client" ]
description  = "Starknet IBC light-client"

[lints]
workspace = true

[dependencies]
# internal dependencies
starknet-storage-verifier = { workspace = true, features = [ "ibc" ] }
starknet-block-verifier   = { workspace = true }
starknet-crypto-lib       = { workspace = true, features = [ "cosmwasm" ] }

# external dependencies
derive_more                         = { workspace = true }
serde                               = { workspace = true, optional = true }
serde_json                          = { workspace = true }
prost                               = { workspace = true }
prost-types                         = { workspace = true }
cgp                                 = { workspace = true }
hermes-prelude                      = { workspace = true }
hermes-encoding-components          = { workspace = true }
hermes-protobuf-encoding-components = { workspace = true }
hermes-cosmos-encoding-components   = { workspace = true }

# ibc dependencies
ibc-core                  = { workspace = true }
ibc-client-starknet-types = { workspace = true }
ibc-client-cw             = { workspace = true }

# starknet dependencies
starknet-core = { workspace = true }

[features]
default = [ "std" ]
std = [
  "ibc-core/std",
  "ibc-client-starknet-types/std",
]
serde = [
  "dep:serde",
  "ibc-core/serde",
  "ibc-client-starknet-types/serde",
]
