[package]
name         = "starknet-block-verifier"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
repository   = { workspace = true }
readme       = "./../README.md"
keywords     = [ "starknet", "ibc", "light-client" ]
description  = "Starknet block header verifier"

[dependencies]
serde           = { workspace = true }
starknet-crypto = { workspace = true }
ureq            = { version = "3.0.11", default-features = false, features = [ "json", "rustls" ] }

[dev-dependencies]
starknet   = { workspace = true }
serde_json = { workspace = true }
rstest     = { workspace = true }

[lints]
workspace = true

[features]
default = [  ]
feeder  = [  ]
